# heart-research

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  paper.md  plano_sopro_poucos_dados.md  pyproject.toml  tabela_papers_murmurio_metricas.md
analise_exploratoria_sistole_overlap/: explore_systole_overlap.py  explore_systole_temporal.py
analise_exploratoria_tcn/: analyze_tcn_class_location_split_distribution.py  analyze_tcn_segment_durations.py  analyze_tcn_systole_errors_by_duration_boundary.py  resultados.md
circor-heart-sound-1.0.3/: DICIONARIO_DE_VARIAVEIS.md
docs/: relatorio_pesquisa_sopro_cardiaco_circor.md
feature extraction/: resumo_experimentos_feature_extraction.md
nested_tcn_systole_cnn/: README.md  __init__.py  artifacts.py  cli.py  dashboard.py  data.py  evaluation.py  experiment_registry.py  module_loader.py  paths.py  pipeline.py  scoring.py  train.py
papers/: 2026_10.1038_s41598-026-45276-9.md  2026_10.1186_s13636-026-00447-4.md  comparacao_sota_murmur_detection.md  resumos_papers.md
scripts/: analisar_papers_murmurio_metricas.py  compare_runs.py  ensemble_runs.py  fuse_phase_predictions.py  grade_murmur_ordinal.py  pdf_to_markdown.py  pretrain_physionet2016.py  probe_embeddings.py  probe_wst.py  sqi_quality_detector.py
tests/: test_nested_tcn_systole_cnn_artifacts.py  test_nested_tcn_systole_cnn_cli.py  test_nested_tcn_systole_cnn_dashboard.py  test_nested_tcn_systole_cnn_data.py  test_nested_tcn_systole_cnn_evaluation.py  test_nested_tcn_systole_cnn_registry.py  test_nested_tcn_systole_cnn_smoke.py
(+112 files in other folders)
