[project]
name = "heart-research"
version = "0.1.0"
description = "Research vault utilities for heart sound papers and CirCor feature extraction."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pymupdf4llm>=0.0.27",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "tabulate>=0.9",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
